fixed overlapping for Fa conversion

--- a/src/FormattedDate.css
+++ b/src/FormattedDate.css
@@ -1,7 +1,7 @@
 .FormattedDate {
   color: rgb(112, 117, 122);
   font-size: 17px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 .FormattedDate hr {
   margin: 2px;
