--- a/src/Weather.css
+++ b/src/Weather.css
@@ -52,19 +52,14 @@
   display: inline-block;
   position: relative;
   top: -17px;
-  width: 100%;
-  height: 100%;
-}
-.Weather .icon-wrapper {
-  padding-left: 0;
+  margin-left: 100%;
 }
 
 .Weather h1 {
   color: rgb(32, 33, 36);
-  display: block;
-  font-size: 40px;
+  display: inline-block;
+  font-size: 30px;
   font-weight: 300;
-  margin: 0;
 }
 
 .Weather ul {
